# QH-Edge-Detector

./: CMakeLists.txt  README.md  RandomForest.kdev4  TrackConfig.yaml
.kdev4/: RandomForest.kdev4
include/: DataProcessor.h  DecisionTree.hpp
include/Detector/: Detector.h
include/Image/: DT.hpp  EdgeFeature.hpp  ImgProcession.h  ReadImg.hpp  TypeName.h
include/ObjectDetector/: .Model.h.kate-swp  CameraCalibration.h  Config.h  EdgeDistanceFieldTraking.h  Model.h  Model_Config.h  ObjDetector.h  Optimizer.h  PointSet.hpp  Quaternion.h  Render.h  Transformation.h  model.h
include/Traker/: CameraCalibration.h  Config.h  EdgeDistanceFieldTraking.h  EulerAngle.h  Model.h  ObjDetector.h  Particle.h  Render.h  Traker.h  Transformation.h
include/andres/ml/: decision-trees.hxx
include/edge/: CameraCalibration.h  EdgeDetector.hpp  EdgeFeature.hpp  Model_Config.h  ReadImg.hpp  Render.h
include/tools/: ConvTri.hpp  OcvYamlConfig.h  glm.h  gradient.hpp  imgCvt.hpp  rgbConvertMex.hpp  sse.hpp
src/: CameraCalibration.cpp  DT.cpp  DataProcessor.cpp  Detector.cpp  EdgeDetector.cpp  EdgeDistanceFieldTraking.cpp  ImgProcession.cpp  Model.cpp  OcvYamlConfig.cpp  Optimizer.cpp  Particle.cpp  Quaternion.cpp  Render.cpp  Traker.cpp  Transformation.cpp  estimator_node.cpp  glm.cpp  model.cpp  parameters.cpp
src/loop-closure/: keyframe.cpp  keyframe_database.cpp  keyframe_database.h
src/unittest/: test-DT.cpp  test-decision-trees.cxx  test-model.cpp  test-obj-detector.cpp  test-optimizer.cpp  test-particle.cpp
src/unittest/ml/: test-Edge-detector.cpp  test-decision-trees.cxx
src/utility/: visualization.cpp
